--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,5 +69,7 @@ dependencies {
     debugImplementation libs.androidx.ui.tooling
     debugImplementation libs.androidx.ui.test.manifest
 
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2'
 
 }
